add ml functionalities

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,8 @@
     {% if img_uri %}
 	<div>
 		<img src="{{ img_uri }}">
-        <h4>Butterfly Type: nah lo</h4>
+        <h4>Common Name: {{ common }}</h4>
+        <h4>Scientific Name: {{ scientific }}</h4>
 	</div>
     {% endif %}
 
